gccida/c1/dump_edge_info
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dump_edge_info/src/cfg.c:1023:16: error: use of undeclared identifier 'off_607A24'
fprintf( file, off_607A24, ( unsigned int)v5->index); 
               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dump_edge_info/src/cfg.c:1053:17: error: use of undeclared identifier 'off_607A24'
fprintf( file, &off_607A24[1], ( unsigned int)v10); 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dump_edge_info/src/cfg.c:1055:8: error: use of undeclared identifier 'dump_edge_info_bitnames'
fputs( dump_edge_info_bitnames[v10], file); 
       ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dump_edge_info/src/obj/cfg.o] Error 1
